NIFI-15513 Added property migration tests for snowflake, social-media, splunk, update-attribute, websocket, windows-event-log, workday and zendesk (#10820)
Signed-off-by: David Handermann <exceptionfactory@apache.org>